[package]
name = "message_worker"
version = "0.3.0"
authors = ["Nick Webster <nick@nick.geek.nz>"]
description = "Message Worker is a low-ish level library for Rust for the creation of event-listeners using futures and streams. Notably MW supports non-sync and non-send (i.e. non-thread-safe) contexts within listeners."
readme = "README.md"
edition = "2018"
license = "MPL-2.0"
categories = ["asynchronous", "concurrency"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.6.0", features = ["rt-multi-thread", "sync", "parking_lot"] }
tokio-stream = { version = "~0.1.6", features = ["sync"] }
anyhow = "^1.0.40"

[dev-dependencies]
tokio = { version = "^1.6.0", features = ["rt-multi-thread", "sync", "parking_lot", "macros", "test-util"] }
deno_core = "~0.88.0"
criterion = "~0.3.4"
