[package]
name = "pingpong"
version = "0.1.0"
authors = ["Nick Webster <nick@nick.geek.nz>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
message_worker = { path = "../.." }
tokio = { version = "^1.6.0", features = ["rt-multi-thread", "sync", "macros", "parking_lot"] }
anyhow = "^1.0.40"
tokio-stream = { version = "~0.1.6", features = ["sync"] }
im = "^15.0.0"
